# candle

./: Cargo.toml  README.md
candle-book/: Cargo.toml
candle-book/src/guide/: installation.md
candle-core/: Cargo.toml
candle-core/benches/: bench_main.rs
candle-core/benches/benchmarks/: copy.rs  mod.rs
candle-core/src/: backend.rs  custom_op.rs  device.rs  dummy_cuda_backend.rs  dummy_metal_backend.rs  dummy_wgpu_backend.rs  storage.rs  tensor.rs
candle-core/src/cpu_backend/: mod.rs
candle-core/src/wgpu_backend/: device.rs  storage.rs
candle-core/src/wgpu_backend/cache/: shader.rs
candle-core/src/wgpu_backend/wgpu_functions/: convert.rs  mod.rs
candle-core/tests/: conv_tests.rs  tensor_tests.rs
candle-examples/: Cargo.toml
candle-nn/: Cargo.toml
candle-nn/src/: lib.rs  ops.rs
candle-pyo3/: Cargo.toml
candle-transformers/src/generation/: mod.rs
candle-wasm-examples/bert/: Cargo.toml
candle-wasm-examples/blip/: Cargo.toml
candle-wasm-examples/candle-test/: Cargo.toml
candle-wasm-examples/llama2-c/: Cargo.toml
candle-wasm-examples/llama2-c/src/: worker.rs
candle-wasm-examples/moondream/: Cargo.toml
candle-wasm-examples/phi/: Cargo.toml
candle-wasm-examples/segment-anything/: Cargo.toml
candle-wasm-examples/stable-diffusion/: Cargo.toml
candle-wasm-examples/t5/: Cargo.toml
candle-wasm-examples/wasm-helper/: Cargo.toml
candle-wasm-examples/whisper/: Cargo.toml
candle-wasm-examples/wuerstchen/: Cargo.toml
candle-wasm-examples/xtask/: Cargo.toml
candle-wasm-examples/yolo/: Cargo.toml
candle-wasm-tests/: Cargo.toml
candle-wasm-tests/tests/: all.rs  tensor_tests.rs
candle-wgpu-kernels/: Cargo.toml
candle-wgpu-kernels/candle-wgpu-kernels-macro/: Cargo.toml
candle-wgpu-kernels/src/kernels/: convert.pwgsl  index_select.pwgsl
