[workspace]
members = [
    "candle-core",
    "candle-datasets",
    "candle-examples",
    "candle-book",
    "candle-nn",
    "candle-pyo3",
    "candle-transformers",
    "candle-wasm-examples/*",
    "candle-wasm-tests",
    "tensor-tools",
    "candle-wgpu-kernels",
]
exclude = [
   "candle-flash-attn",
   "candle-kernels",
   
   "candle-metal-kernels",
   "candle-onnx",
]
resolver = "2"

[workspace.package]
version = "0.8.4"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ab_glyph = "0.2.29"
accelerate-src = { version = "0.3.2" }
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.5.0"
candle = { path = "./candle-core", package = "candle-core", version = "0.8.4" }
candle-datasets = { path = "./candle-datasets", version = "0.8.4" }
candle-flash-attn = { path = "./candle-flash-attn", version = "0.8.4" }
candle-kernels = { path = "./candle-kernels", version = "0.8.4" }
candle-metal-kernels = { path = "./candle-metal-kernels", version = "0.8.4" }
candle-wgpu-kernels = { path = "./candle-wgpu-kernels", version = "0.8.4" }
candle-nn = { path = "./candle-nn", version = "0.8.4" }
candle-onnx = { path = "./candle-onnx", version = "0.8.4" }
candle-transformers = { path = "./candle-transformers", version = "0.8.4" }
clap = { version = "4.5.37", features = ["derive"] }
criterion = { version = "0.5.1", default-features=false }
cudarc = { version = "0.16.1", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
fancy-regex = "0.14.0"
gemm = { version = "0.18.2", features = ["wasm-simd128-enable"] }
hf-hub = "0.4.2"
half = { version = "2.6.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
hound = "3.5.1"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.172" }
log = "0.4"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
num_cpus = "1.16.0"
num-traits = "0.2.19"
parquet = { version = "55.0.0" }
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
safetensors = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.140"
thiserror = "2"
tokenizers = { version = "0.21.1", default-features = false }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
ug = "0.4.0"
ug-cuda = "0.4.0"
ug-metal = "0.4.0"
yoke = { version = "0.8.0", features = ["derive"] }
zip = { version = "2.6.1", default-features = false }
metal = { version = "0.32.0", features = ["mps"]}

#wgpu dependencies:
wgpu = {version="25.0.0", features=["fragile-send-sync-non-atomic-wasm"]}
bytemuck = { version = "1.22", features = [ "derive" ] }
pollster = "0.4.0"
flume = "0.11.1"
tracing-mutex = "0.3.0"
web-time = "=1.1.0"
rustc-hash = "2.1.1"

[profile.release-with-debug]
inherits = "release"
debug = true
