[package]
name = "wasm-helper"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle = { workspace = true, features = ["wgpu"]} #error
candle-nn = { workspace = true , features = ["wgpu"]}
safetensors = { workspace = true }
yoke = { workspace = true }
memmap2 = { workspace = true }

# App crates.
anyhow = { workspace = true }
log = { workspace = true }

# Wasm specific crates.
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

js-sys = "0.3.77"
thiserror = "2.0.12"
urlencoding = "2.1.3"
serde = "1.0.219"
serde_json = "1.0.140"


#hf-hub = {version="0.3.0"} 
#hf-hub = {version="0.3.0", default-features = false} 

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Navigator',
  'StorageManager',
  'File',
  'FileSystem',
  'FileSystemDirectoryEntry',
  'FileSystemHandle',
  'FileSystemDirectoryHandle',
  'FileSystemFileHandle',
  'FileSystemGetFileOptions',
  'FileSystemWritableFileStream',
  'FileSystemGetDirectoryOptions',
  'FileSystemDirectoryReader',
  'FileSystemDirectoryEntry',
  'FileSystemRemoveOptions',
  'ReadableStream',
  'Blob'
]
