[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# The dependencies in this config have no transitive dependencies.
anyhow = "1.0.98"
env_logger = { version = "0.11.8", default-features = false }
regex-lite = "0.1.6" 
log = "0.4.27"
pico-args = { version = "0.5.0", features = [
    "eq-separator",
    "short-space-opt",
    "combined-flags",
] }
xshell = "0.2.7"
notify = "8.0.0"
glob = "0.3.2"
